# sqlite-dataset

./: README.md  pyproject.toml
sqlite_dataset/: __init__.py  dataset.py  test.db  test.py  utils.py
