[tool.poetry]
name = "sqlite-dataset"
version = "0.1.0"
description = ""
authors = ["Jinshuai Ma <mayazureee@gmail.com>"]
readme = "README.md"
packages = [{include = "sqlite_dataset"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
